--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@200;300;400;500;600;700;800&display=swap");
 
-.rainbow-text {
-	@apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-pink-600;
-}
-.rainbow-bg {
-	@apply bg-gradient-to-r from-primary to-pink-600;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+	font-family: 'Lato', 'sans-serif';
 }
 
+.rainbow-text {
+	@apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-purple-300;
+}
+
+.rainbow-bg {
+	@apply bg-gradient-to-r from-primary to-amber-300;
+}
 .page-enter-active,
 .page-leave-active {
 	transition: all 0.3s ease-in-out;
