--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,11 @@ body {
 }
 
 .rainbow-text {
-	@apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-purple-300;
+	@apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-sub;
 }
 
 .rainbow-bg {
-	@apply bg-gradient-to-r from-primary to-amber-300;
+	@apply bg-gradient-to-r from-primary to-sub;
 }
 .page-enter-active,
 .page-leave-active {
